# spectrogram-voicemeeter

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  app_window.c  buffer_process.c  buffer_process.h  graph.c  graph.h  main.c  stream.c  stream.h
include/: app_window.h  buffer_process.h  stream.h
src/: buffer_process.c  main.c
